[gd_scene load_steps=8 format=3 uid="uid://dhpno5sgls8en"]

[ext_resource type="Script" path="res://scripts/main/options.gd" id="1_cyq4y"]
[ext_resource type="Environment" uid="uid://cb3w11r233fne" path="res://components/lightkeepers_environment.tres" id="2_gup4m"]
[ext_resource type="Theme" uid="uid://dau23jgucm04a" path="res://assets/theme/lightkeepers_theme.tres" id="3_urf2e"]
[ext_resource type="PackedScene" uid="uid://dxc05c2onoqru" path="res://scenes/ui/keybind_button.tscn" id="4_v5h0o"]
[ext_resource type="Shader" path="res://assets/shaders/outline.gdshader" id="5_qcqxc"]
[ext_resource type="Texture2D" uid="uid://ekrnron0ftim" path="res://assets/prototypes/x.png" id="6_no68u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wpns1"]
shader = ExtResource("5_qcqxc")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[node name="Options" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_cyq4y")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_gup4m")

[node name="OptionsControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_urf2e")

[node name="Shadow" type="ColorRect" parent="OptionsControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0434298, 0.0213921, 0.106189, 0.486275)

[node name="OptionsMenu" type="TabContainer" parent="OptionsControl"]
custom_minimum_size = Vector2(350, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -309.0
offset_right = 239.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
current_tab = 0

[node name="MAIN_OPTIONS" type="Control" parent="OptionsControl/OptionsMenu"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollableMenu" type="ScrollContainer" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="MenuContainer" type="VBoxContainer" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 6

[node name="LanguageLabel" type="Label" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer"]
layout_mode = 2
text = "LANGUAGE"
horizontal_alignment = 1
autowrap_mode = 3

[node name="LanguageButton" type="OptionButton" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer"]
layout_mode = 2
alignment = 1
text_overrun_behavior = 3
clip_text = true
selected = 0
fit_to_longest_item = false
item_count = 2
popup/item_0/text = "English"
popup/item_1/text = "PortuguÃªs Brasileiro"
popup/item_1/id = 1

[node name="VolumeButtons" type="VBoxContainer" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Master_Label" type="Label" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer/VolumeButtons"]
layout_mode = 2
text = "MASTER_VOLUME"
horizontal_alignment = 1

[node name="Master_Slider" type="HSlider" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer/VolumeButtons"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.5

[node name="Master_Toggle" type="CheckButton" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer/VolumeButtons/Master_Slider"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 248.0
offset_top = -15.0
offset_right = 292.0
offset_bottom = 15.0
grow_vertical = 2
icon_alignment = 1

[node name="Music_Label" type="Label" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer/VolumeButtons"]
layout_mode = 2
text = "MUSIC_VOLUME"
horizontal_alignment = 1

[node name="Music_Slider" type="HSlider" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer/VolumeButtons"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.5

[node name="Music_Toggle" type="CheckButton" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer/VolumeButtons/Music_Slider"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 248.0
offset_top = -15.0
offset_right = 292.0
offset_bottom = 15.0
grow_vertical = 2
icon_alignment = 1

[node name="Effects_Label" type="Label" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer/VolumeButtons"]
layout_mode = 2
text = "SOUND_EFFECTS"
horizontal_alignment = 1

[node name="Effects_Slider" type="HSlider" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer/VolumeButtons"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.5

[node name="Effect_Toggle" type="CheckButton" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer/VolumeButtons/Effects_Slider"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 248.0
offset_top = -15.0
offset_right = 292.0
offset_bottom = 15.0
grow_vertical = 2
icon_alignment = 1

[node name="Stage" type="VBoxContainer" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer"]
layout_mode = 2

[node name="StageLabel" type="Label" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer/Stage"]
layout_mode = 2
text = "STAGE"
horizontal_alignment = 1
autowrap_mode = 3

[node name="RestartStageButton" type="Button" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer/Stage"]
layout_mode = 2
text = "RESTART"

[node name="ReturnToMenuButton" type="Button" parent="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer/Stage"]
layout_mode = 2
text = "MAIN_MENU"

[node name="CONTROLS" type="Control" parent="OptionsControl/OptionsMenu"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollableMenu" type="ScrollContainer" parent="OptionsControl/OptionsMenu/CONTROLS"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="Container" type="VBoxContainer" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 20

[node name="KeybindGrid" type="GridContainer" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
columns = 2

[node name="UP" type="Label" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container/KeybindGrid"]
layout_mode = 2
text = "UP"
horizontal_alignment = 2

[node name="UP_B" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container/KeybindGrid" instance=ExtResource("4_v5h0o")]
layout_mode = 2
keybind = "move_up"

[node name="LEFT" type="Label" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container/KeybindGrid"]
layout_mode = 2
text = "LEFT"
horizontal_alignment = 2

[node name="LEFT_B" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container/KeybindGrid" instance=ExtResource("4_v5h0o")]
layout_mode = 2
keybind = "move_left"

[node name="DOWN" type="Label" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container/KeybindGrid"]
layout_mode = 2
text = "DOWN"
horizontal_alignment = 2

[node name="DOWN_B" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container/KeybindGrid" instance=ExtResource("4_v5h0o")]
layout_mode = 2
keybind = "move_down"

[node name="RIGHT" type="Label" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container/KeybindGrid"]
layout_mode = 2
text = "RIGHT"
horizontal_alignment = 2

[node name="RIGHT_B" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container/KeybindGrid" instance=ExtResource("4_v5h0o")]
layout_mode = 2
keybind = "move_right"

[node name="ENTER" type="Label" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container/KeybindGrid"]
layout_mode = 2
text = "ENTER"
horizontal_alignment = 2

[node name="ENTER_B" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container/KeybindGrid" instance=ExtResource("4_v5h0o")]
layout_mode = 2
keybind = "enter"

[node name="ESCAPE" type="Label" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container/KeybindGrid"]
layout_mode = 2
text = "ESCAPE"
horizontal_alignment = 2

[node name="ESCAPE_B" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container/KeybindGrid" instance=ExtResource("4_v5h0o")]
layout_mode = 2
keybind = "escape"

[node name="SPACE" type="Label" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container/KeybindGrid"]
layout_mode = 2
text = "SPACE"
horizontal_alignment = 2

[node name="SPACE_B" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container/KeybindGrid" instance=ExtResource("4_v5h0o")]
layout_mode = 2
keybind = "space"

[node name="ResetKeybinds" type="Button" parent="OptionsControl/OptionsMenu/CONTROLS/ScrollableMenu/Container"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "RESET_DEFAULT_KEYBINDS"

[node name="ExitButton" type="TextureButton" parent="OptionsControl"]
material = SubResource("ShaderMaterial_wpns1")
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 181.0
offset_top = -248.0
offset_right = 229.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_no68u")

[node name="ExitCheck" type="ConfirmationDialog" parent="OptionsControl"]
title = "EXIT"
initial_position = 1
size = Vector2i(329, 100)
ok_button_text = "SAVE"
dialog_text = "SAVE_OPTIONS_CONFIRMATION_DIALOG"
cancel_button_text = "CANCEL"

[node name="ResetKeybindsCheck" type="ConfirmationDialog" parent="OptionsControl"]
title = "RESET"
initial_position = 1
size = Vector2i(267, 100)
ok_button_text = "CONFIRM"
dialog_text = "RESET_DEFAULT_KEYBINDS_TEXT"
cancel_button_text = "CANCEL"

[connection signal="pressed" from="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer/Stage/RestartStageButton" to="." method="_on_restart_stage_button_pressed"]
[connection signal="pressed" from="OptionsControl/OptionsMenu/MAIN_OPTIONS/ScrollableMenu/MenuContainer/Stage/ReturnToMenuButton" to="." method="_on_main_menu_button_pressed"]
